--- a/public/css/house.css
+++ b/public/css/house.css
@@ -2,7 +2,7 @@ body {
      margin: 0;
 }
 html {
-     background: url(back.png) no-repeat center center fixed;
+     background: url("back.png") no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
@@ -14,10 +14,21 @@ html {
      padding: 0;
      border: 0;
 }
-
+:root{
+   scrollbar-color: #2d4059 #1d191f !important;
+   scrollbar-width: thin !important;  
+}
+::-webkit-scrollbar{
+     width: 15px;
+}
+::-webkit-scrollbar-track{
+      background: #1d191f;
+}
+::-webkit-scrollbar-thumb{
+      background: #2d4059;
+}
 .container {
      width: 50%;
-     height: 100vh;
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
      padding: 30px 30px 30px 60px;
      position: absolute;
@@ -39,79 +50,35 @@ h1 {
      font-size: 30px;
      color: black;
      text-align: center;
-     padding: 5px 0 25px 0;
+     padding: 5px 0 20px 0;
 }
 h2 {
      font-family: "Poppins";
      font-size: 18px;
      color: white;
-     padding: 7px 0px 7px 0px;
+     padding: 5px 0px 5px 0px;
 }
 h3 {
      font-family: "Poppins";
      font-size: 18px;
-     color: rgb(209, 197, 28);
-     padding-bottom: 20px;
+     color: rgb(236, 223, 43);
+     padding-bottom: 5px;
 }
-
-#button {
-     width: 70%;
-     background-color: green;
-     color: white;
-     padding: 7px;
-     border: 3px solid white;
-     border-radius: 10px;
-     text-align: center;
-     font-family: "Open Sans";
+h4 {
+     font-family: "Poppins";
      font-size: 18px;
-     margin-top: 30px;
-     cursor: pointer;
-}
-#button1 {
-     width: 70%;
-     background-color: green;
      color: white;
-     padding: 7px;
-     border: 3px solid white;
-     border-radius: 10px;
-     text-align: center;
-     font-family: "Open Sans";
-     font-size: 18px;
-     margin-top: 30px;
-     cursor: pointer;
+     padding: 15px 0px 15px 0px;
 }
-#linkedIn{
-     background: #007bb5;
+h5 {
+     font-family: "Poppins";
+     font-size: 17px;
      color: white;
-     padding: 10px;
-     font-size: 25px;
-     width: 25% ;
-     text-align: center;
-     text-decoration: none;
-     margin: 20px 20px 20px 0p;
-     border-radius: 15px;
+     padding-bottom: 10px;
 }
-#github{
-     background: #dd4b39;
-     color: white;
-     padding: 10px;
-     font-size: 25px;
-     width: 25%;
-     text-align: center;
-     text-decoration: none;
-     margin: 20px;
-     border-radius: 15px;
-}
-#insta{
-     background: #125688;
-     color: white;
-     padding: 10px;
-     font-size: 25px;
-     width: 25%;
-     text-align: center;
-     text-decoration: none;
-     margin: 20px 20px 20px 0;
-     border-radius: 15px;
+span {
+     color: rgb(236, 223, 43);
+     padding-left: 10px;
 }
 .loader-wrapper {
      width: 100%;
