--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -1,79 +1,114 @@
-body{
+* {
      margin: 0;
-}
-.section {
-     width: 100%;
-     height: 100vh;
-     display: flex;
-     position: relative;
-     align-items: center;
-     justify-content: center;
+     padding: 0;
+     border: 0;
+     box-sizing: border-box;
      overflow: hidden;
 }
-.video-container {
+html,
+body {
+     margin: 0;
+     padding: 0;
+     background: url(back.png) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+}
+.container {
+     width: 50%;
+     height: 100vh;
+     position: absolute;
+     right: 0;
+}
+.container h2 {
+     color: black;
+     font-family: "Goldman";
+     font-size: 50px;
+     width: 100%;
+     position: absolute;
+     top: 20%;
+     left: 20%;
+}
+
+#button {
+     color: white;
+     font-family: "Open Sans";
+     font-size: 18px;
+     width: 30%;
+     padding: 10px;
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     cursor: pointer;
+     border: 3px solid white;
+     border-radius: 10px;
+     background-color: green;
+     transform: translateX(-50%) translateY(150%);
+}
+
+
+.loader-wrapper {
+     width: 100%;
+     height: 100%;
      position: absolute;
      top: 0;
      left: 0;
+     z-index: 1;
+     background-color: #242f3f;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+}
+.loader {
+     display: inline-block;
+     width: 30px;
+     height: 30px;
+     position: relative;
+     border: 4px solid #fff;
+     animation: loader 2s infinite ease;
+}
+.loader-inner {
+     vertical-align: top;
+     display: inline-block;
      width: 100%;
+     background-color: #fff;
+     animation: loader-inner 2s infinite ease-in;
 }
 
-h2 {
-     font-size: 50px;
-     width: 35%;
-     background-color: black;
-     margin: auto;
-     padding: 5px 5px 10px 5px;
-     font-weight: bolder;
-     color: white;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     position: absolute;
-     opacity: 0.5;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-49%) translateY(-310%);
-     animation: text 3s 1;
-}
-@keyframes text {
+@keyframes loader {
      0% {
-          color: black;
+          transform: rotate(0deg);
      }
-     35% {
-          letter-spacing: 5px;
+     25% {
+          transform: rotate(180deg);
      }
-     85% {
-          letter-spacing: 0px;
+     50% {
+          transform: rotate(180deg);
      }
-}     
-#button {
-     width: 15%;
-     font-size: 22px;
-     opacity: 0.8;
-     color: white;
-     height: 50px;
-     border-radius: 10px;
-     border: 3px solid white;
-     background-color: black;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(+145%);
+     75% {
+          transform: rotate(360deg);
+     }
+     100% {
+          transform: rotate(360deg);
+     }
 }
 
-#button:hover {
-     background-color: green;
-     cursor: pointer;
+@keyframes loader-inner {
+     0% {
+          height: 0%;
+     }
+     25% {
+          height: 0%;
+     }
+     50% {
+          height: 100%;
+     }
+     75% {
+          height: 100%;
+     }
+     100% {
+          height: 0%;
+     }
 }
 
-/* body
-    {
-        background-image:url(back.jpg);
-        background-size:cover;
-        /* background-attachment:fixed; */
-/* background-position:center;
-        background-repeat: no-repeat; */
-/* } */
