--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,101 +1,23 @@
-a:link {
-     color: white;
-     text-decoration: solid;
+::placeholder {
+     color: black;
 }
-a:visited {
-     color: white;
+* {
+     box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+     border: 0;
 }
 a:hover {
-     color: orange;
+     color: black;
 }
-::placeholder{
+a {
      color: white;
-     font-size: 12px;
-}
-
-
-#myEmail {
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 16px;
-}
-#myInput {
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 16px;
-}
-
-h1 {
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     font-size: 23px;
-     color: white;
-}
-h2 {
-     color: orange;
+     text-decoration: none;
+     font-family: "Poppins";
      font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(+70%) translateY(-150%);
 }
-p {
-     color: orange;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+50%);
-}
-option {
-     color: orange;
-     background-color: black;
-}
-select {
-     background-color: black;
-     color: white;
-     width: 200px;
-     height: 25px;
-     border-radius: 5px;
-     cursor: pointer;
-}
-#button {
-     margin: 40px auto 20px;
-     width: 80%;
-     display: block;
-     outline: none;
-     padding: 10px 0;
-     border: 3px solid white;
-     cursor: pointer;
-     background: transparent;
-     color: white;
-     opacity: 0.8;
-     font-size: 16px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     border-radius: 10px;
-}
-#button:hover {
-     background-color: green;
-}
-.form-box {
-     width: 400px;
-     margin: auto;
-     background: black;
-     padding: 20px;
-     border-radius: 20px;
-     opacity: 0.8;
-     transform: translateX(0%) translateY(25%);
-}
-.input-box {
-     margin: 31px auto;
-     width: 80%;
-     padding-top: 5px;
-}
-.input-box input {
-     width: 90%;
-     border: 2px solid orange;
-     border-radius: 5px;
-     outline: none;
-     background: transparent;
-     color: white;
+body {
+     margin: 0;
 }
 html {
      background: url(back.png) no-repeat center center fixed;
@@ -104,18 +26,130 @@ html {
      -o-background-size: cover;
      background-size: cover;
 }
+.container {
+     width: 50%;
+     height: 100vh;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     padding: 30px 30px 30px 60px;
+     position: absolute;
+     right: 0;
+     opacity: 0.8;
+}
+
+h1 {
+     font-family: "Goldman";
+     font-size: 30px;
+     color: black;
+     text-align: center;
+     padding-bottom:10px;
+}
+h2 {
+     font-family: "Poppins";
+     font-size: 16px;
+     color: white;
+     padding: 10px 0 7px 0;
+}
+
+.input-box input {
+     padding: 5px 5px 5px 30px;
+     border-radius: 5px;
+     border: 2px solid white;
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+     background: transparent;
+     width: 70%;
+     margin-bottom: 10px;
+}
+.input-box input:focus {
+     border-color: 2px solid #c2b280;
+}
+
+.input-box i {
+     position: absolute;
+}
+.icon {
+     padding: 10px;
+     min-width: 40px;
+     color: white;
+}
 .eye {
      position: absolute;
 }
-.eye1 {
+#button {
+     width: 40%;
+     background-color: green;
+     cursor: pointer;
+     color: white;
+     padding: 5px;
+     border: 3px solid white;
+     border-radius: 10px;
+     text-align: center;
+     font-family: "Open Sans";
+     font-size: 18px;
+}
+
+.loader-wrapper {
+     width: 100%;
+     height: 100%;
      position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 1;
+     background-color: #242f3f;
+     display: flex;
+     justify-content: center;
+     align-items: center;
 }
-.eye2 {
-     position: absolute;
+.loader {
+     display: inline-block;
+     width: 30px;
+     height: 30px;
+     position: relative;
+     border: 4px solid #fff;
+     animation: loader 2s infinite ease;
 }
-#hide1 {
-     display: none;
+.loader-inner {
+     vertical-align: top;
+     display: inline-block;
+     width: 100%;
+     background-color: #fff;
+     animation: loader-inner 2s infinite ease-in;
 }
-#hide3 {
-     display: none;
+
+@keyframes loader {
+     0% {
+          transform: rotate(0deg);
+     }
+     25% {
+          transform: rotate(180deg);
+     }
+     50% {
+          transform: rotate(180deg);
+     }
+     75% {
+          transform: rotate(360deg);
+     }
+     100% {
+          transform: rotate(360deg);
+     }
 }
+
+@keyframes loader-inner {
+     0% {
+          height: 0%;
+     }
+     25% {
+          height: 0%;
+     }
+     50% {
+          height: 100%;
+     }
+     75% {
+          height: 100%;
+     }
+     100% {
+          height: 0%;
+     }
+}
+
