--- a/public/css/maccount.css
+++ b/public/css/maccount.css
@@ -1,138 +1,188 @@
-h1 {
-     font-size: 20px;
-     width: 85vw;
-     background-color: black;
-     border-radius: 10px;
-     margin: auto;
-     padding: 10px;
-     color: white;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     opacity: 0.8;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(-500%);
-     animation: text 3s 1;
-}
-h2 {
-     font-size: 20px;
-     width: 85vw;
-     background-color: black;
-     border-radius: 10px;
-     margin: auto;
-     color: white;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     position: absolute;
-     padding: 10px;
-     opacity: 0.8;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(-300%);
-     animation: text 3s 1;
-}
-h3 {
-     font-size: 20px;
-     width: 85vw;
-     background-color: black;
-     border-radius: 10px;
-     margin: auto;
-     color: white;
-     opacity: 0.8;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     position: absolute;
-     padding: 10px;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(-100%);
-     animation: text 3s 1;
-}
-h4 {
-     font-size: 20px;
-     width: 85%;
-     background-color: black;
-     border-radius: 10px;
-     margin: auto;
-     opacity: 0.8;
-     color: white;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     position: absolute;
-     padding: 10px;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-50%) translateY(+100%);
-     animation: text 3s 1;
-}
-@keyframes text {
-     0% {
-          color: black;
-     }
-     35% {
-          letter-spacing: 2px;
-     }
-     85% {
-          letter-spacing: 0px;
-     }
-}
-#button {
-     width: 45vw;
-     font-size: 20px;
-     font-weight: bold;
-     color: white;
-     height: 50px;
-     opacity: 0.8;
-     border-radius: 10px;
-     background-color: black;
-     text-align: center;
-     font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(1%) translateY(+370%);
-}
-#button1 {
-     width: 40vw;
-     font-size: 20px;
-     font-weight: bold;
-     color: white;
-     height: 50px;
-     opacity: 0.8;
-     border-radius: 10px;
-     background-color: black;
-     text-align: center;
-     font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-116%) translateY(+370%);
-}
-
-#button:hover {
-     background-color: green;
-     cursor: pointer;
-}
-#button1:hover {
-     background-color: green;
-     cursor: pointer;
+body {
+     margin: 0;
 }
 html {
-     background: url(back.png) no-repeat center center fixed;
+     background: url(mBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
 }
-span {
-     color: orange;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+* {
+     box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+     border: 0;
 }
+
+.container {
+     width: 85%;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     padding: 20px 20px 30px 30px;
+     position: absolute;
+     border-radius: 20px;
+     margin: auto;
+     opacity: 0.8;
+     top: 50%;
+     left: 50%;
+     transform: translateX(-50%) translateY(-50%);
+}
+.column {
+     float: left;
+}
+.left {
+     width: 40%;
+}
+.right {
+     width: 60%;
+     padding-left: 10px;
+}
+.divide:after {
+     content: "";
+     display: table;
+     clear: both;
+}
+h1 {
+     font-family: "Goldman";
+     font-size: 25px;
+     color: black;
+     text-align: center;
+     padding: 5px 0 20px 0;
+}
+h2 {
+     font-family: "Poppins";
+     font-size: 15px;
+     color: white;
+     padding: 5px 0px 5px 0px;
+}
+h3 {
+     font-family: "Poppins";
+     font-size: 15px;
+     color: rgb(236, 223, 43);
+     padding-bottom: 14px;
+}
+
+#button {
+     width: 97%;
+     background-color: green;
+     color: white;
+     padding: 2px;
+     border: 3px solid white;
+     border-radius: 4px;
+     text-align: center;
+     margin-top: 7px;
+     font-family: "Open Sans";
+     font-size: 16px;
+     cursor: pointer;
+}
+#button1 {
+     width: 100%;
+     background-color: green;
+     color: white;
+     padding: 2px;
+     border: 3px solid white;
+     border-radius: 4px;
+     text-align: center;
+     font-family: "Open Sans";
+     font-size: 16px;
+     margin-top: 7px;
+     cursor: pointer;
+     
+}
+#linkedIn{
+     background: #007bb5;
+     color: white;
+     padding: 10px;
+     font-size: 20px;
+     width: 25%;
+     text-align: center;
+     text-decoration: none;
+     margin-right: 10px;
+     border-radius: 10px;
+}
+#github{
+     background: #dd4b39;
+     color: white;
+     padding: 10px;
+     font-size: 20px;
+     width: 25%;
+     text-align: center;
+     text-decoration: none;
+     margin: 0 10px 0 10px;
+     border-radius: 10px;
+}
+     #insta{
+     background: #125688;
+     color: white;
+     padding: 10px;
+     font-size: 20px;
+     width: 25%;
+     text-align: center;
+     text-decoration: none;
+     margin-left: 10px;
+     border-radius: 10px;
+}
+.loader-wrapper {
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 1;
+     background-color: #242f3f;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+}
+.loader {
+     display: inline-block;
+     width: 30px;
+     height: 30px;
+     position: relative;
+     border: 4px solid #fff;
+     animation: loader 2s infinite ease;
+}
+.loader-inner {
+     vertical-align: top;
+     display: inline-block;
+     width: 100%;
+     background-color: #fff;
+     animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+     0% {
+          transform: rotate(0deg);
+     }
+     25% {
+          transform: rotate(180deg);
+     }
+     50% {
+          transform: rotate(180deg);
+     }
+     75% {
+          transform: rotate(360deg);
+     }
+     100% {
+          transform: rotate(360deg);
+     }
+}
+
+@keyframes loader-inner {
+     0% {
+          height: 0%;
+     }
+     25% {
+          height: 0%;
+     }
+     50% {
+          height: 100%;
+     }
+     75% {
+          height: 100%;
+     }
+     100% {
+          height: 0%;
+     }
+}
+
