--- a/public/css/mintro.css
+++ b/public/css/mintro.css
@@ -1,67 +1,111 @@
-html {
-     background: url(back.png) no-repeat center center fixed;
+* {
+     margin: 0;
+     padding: 0;
+     border: 0;
+     box-sizing: border-box;
+     overflow: hidden;
+}
+html,
+body {
+     margin: 0;
+     padding: 0;
+     background: url(mBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
 }
-body {
-     margin: 0;
+.container {
+     width: 100%;
+     height: 100vh;
+     position: absolute;
 }
-video{
-     display: none;
+.container h2 {
+     color: black;
+     font-family: "Goldman";
+     font-size: 35px;
+     width: 100%;
+     position: absolute;
+     top: 20%;
+     left: 12%;
 }
 
-h2 {
-     font-size: 32px;
-     margin: auto;
-     width: 70%;
-     background-color: black;
-     padding: 10px;
-     font-weight: bolder;
-     color: white;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     border: 5px solid orange;
-     position: absolute;
-     opacity: 0.4;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-49%) translateY(-420%);
-     animation: text 3s 1;
-}
-@keyframes text {
-     0% {
-          color: black;
-     }
-     35% {
-          letter-spacing: 3px;
-     }
-     85% {
-          letter-spacing: 0px;
-     }
-}     
 #button {
-     width: 37%;
-     font-size: 22px;
-     opacity: 0.8;
      color: white;
-     height: 50px;
-     border-radius: 10px;
-     border: 3px solid white;
-     background-color: black;
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     font-family: "Open Sans";
+     font-size: 18px;
+     width: 50%;
+     padding: 5px;
      position: absolute;
      top: 50%;
      left: 50%;
-     transform: translateX(-50%) translateY(+100%);
-}
-
-#button:hover {
-     background-color: green;
      cursor: pointer;
+     border: 3px solid white;
+     border-radius: 7px;
+     background-color: green;
+     transform: translateX(-50%) translateY(150%);
 }
 
+.loader-wrapper {
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 1;
+     background-color: #242f3f;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+}
+.loader {
+     display: inline-block;
+     width: 30px;
+     height: 30px;
+     position: relative;
+     border: 4px solid #fff;
+     animation: loader 2s infinite ease;
+}
+.loader-inner {
+     vertical-align: top;
+     display: inline-block;
+     width: 100%;
+     background-color: #fff;
+     animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+     0% {
+          transform: rotate(0deg);
+     }
+     25% {
+          transform: rotate(180deg);
+     }
+     50% {
+          transform: rotate(180deg);
+     }
+     75% {
+          transform: rotate(360deg);
+     }
+     100% {
+          transform: rotate(360deg);
+     }
+}
+
+@keyframes loader-inner {
+     0% {
+          height: 0%;
+     }
+     25% {
+          height: 0%;
+     }
+     50% {
+          height: 100%;
+     }
+     75% {
+          height: 100%;
+     }
+     100% {
+          height: 0%;
+     }
+}
