--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -1,121 +1,156 @@
-a:link {
-     color: white;
-     text-decoration: solid;
+::placeholder {
+     color: black;
 }
-a:visited {
-     color: white;
+* {
+     box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+     border: 0;
 }
 a:hover {
-     color: orange;
+     color: black;
 }
-#myEmail {
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 20px;
+a {
+    color: white;
+    text-decoration: none;
+    font-size: 12px;
+    font-family: "Poppins";
 }
-#myInput {
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-     font-size: 20px;
+body,html {
+     margin: 0;
+     padding: 0;
 }
-h1 {
-     text-align: center;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     font-size: 35px;
-     color: white;
-     padding: 10px;
-}
-h2 {
-     color: white;
-     font-size: 25px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(+70%) translateY(-60%);
-}
-p {
-     color: white;
-     font-size: 25px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+120%);
-}
-option {
-     color: orange;
-     background-color: black;
-}
-select {
-     background-color: black;
-     color: white;
-     width: 200px;
-     height: 25px;
-     border-radius: 5px;
-     cursor: pointer;
-}
-#button {
-     margin: 40px auto 20px;
-     width: 90%;
-     display: block;
-     outline: none;
-     padding: 15px 10px 15px 10px ;
-     cursor: pointer;
-     background: transparent;
-     color: white;
-     opacity: 0.8;
-     font-size: 30px;
-     border-radius: 10px;
-     border: 3px solid orange;
-}
-#button:hover {
-     background-color: green;
-}
-.form-box {
-     width: 100%;
-     margin: auto;
-     background: black;
-     padding: 60px;
-     border-radius: 20px;
-     opacity: 0.8;
-     transform: translateX(37%) translateY(75%);
-}
-.input-box {
-     margin: 31px auto;
-     width: 90%;
-     padding-top: 5px;
-}
-.input-box input {
-     width: 90%;
-     border: none;
-     outline: none;
-     border-radius: 10px;
-     padding: 5px 5px 5px 9px;
-     background: transparent;
-     color: white;
-}
- input:focus{
-     border: 3px solid green;
-}
-
-.eye {
-     position: absolute;
-}
-.eye1 {
-     position: absolute;
-}
-.eye2 {
-     position: absolute;
-}
-#hide1 {
-     display: none;
-}
-#hide3 {
-     display: none;
-}
-
 html {
-     background: url(back.png) no-repeat center center fixed;
+     background: url(mBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
-     overflow: hidden;
+}
+.container {
+     width: 85%;
+     margin: auto;
+     border-radius: 20px;
+     padding:  20px 20px 30px 30px;
+     opacity: 0.8;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translateX(-50%) translateY(-50%);
+     
+}
 
+h1 {
+     font-family:"Goldman";
+     font-size: 25px;
+     color: black;
+     text-align: center;
+}
+h2 {
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+     padding: 0 0 8px 0;
+}
+
+.input-box input {
+     padding: 5px 5px 5px 30px;
+     border-radius: 5px;
+     border: 2px solid white;
+     font-family: "Poppins";
+     font-size: 12px;
+     color: white;
+     background: transparent;
+     margin-bottom: 5px;
+     width: 90%;
+}
+.input-box input:focus {
+     border: 2px solid #c2b280;
+}
+
+.input-box i {
+     position: absolute;
+}
+.icon {
+     padding: 10px;
+     min-width: 40px;
+     color: white;
+}
+.eye {
+     position: absolute;
+}
+#button {
+     width: 60%;
+     background-color: green;
+     color: white;
+     padding: 2px;
+     border-radius: 4px;
+     text-align: center;
+     font-family: "Open Sans";
+     font-size: 16px;
+}
+
+.loader-wrapper {
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 1;
+     background-color: #242f3f;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+}
+.loader {
+     display: inline-block;
+     width: 30px;
+     height: 30px;
+     position: relative;
+     border: 4px solid #fff;
+     animation: loader 2s infinite ease;
+}
+.loader-inner {
+     vertical-align: top;
+     display: inline-block;
+     width: 100%;
+     background-color: #fff;
+     animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+     0% {
+          transform: rotate(0deg);
+     }
+     25% {
+          transform: rotate(180deg);
+     }
+     50% {
+          transform: rotate(180deg);
+     }
+     75% {
+          transform: rotate(360deg);
+     }
+     100% {
+          transform: rotate(360deg);
+     }
+}
+
+@keyframes loader-inner {
+     0% {
+          height: 0%;
+     }
+     25% {
+          height: 0%;
+     }
+     50% {
+          height: 100%;
+     }
+     75% {
+          height: 100%;
+     }
+     100% {
+          height: 0%;
+     }
 }
