--- a/public/css/mresetPassword.css
+++ b/public/css/mresetPassword.css
@@ -1,8 +1,21 @@
-::placeholder{
+::placeholder {
      color: black;
 }
-body {
+* {
+     box-sizing: border-box;
+}
+a:hover {
+     color: black;
+}
+a {
+    color: white;
+    text-decoration: none;
+    font-size: 13px;
+    font-family: "Poppins";
+}
+html, body {
      margin: 0;
+     padding: 0;
 }
 html {
      background: url(mBack.png) no-repeat center center fixed;
@@ -11,60 +24,10 @@ html {
      -o-background-size: cover;
      background-size: cover;
 }
-* {
-     box-sizing: border-box;
-     margin: 0;
-     padding: 0;
-     border: 0;
-}
-a:hover {
-     color: orange;
-}
-a {
-     color: white;
-     font-family: "Poppins";
-     font-size: 15px;
-     text-decoration: none;
-}
-.container {
-     width: 100%;
-     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
-     padding: 20px 20px 30px 30px;
-     position: absolute;
-     margin: auto;
-     opacity: 0.8;
-}
-.column {
-     float: left;
-     width: 50%;
-}
-.divide:after {
-     content: "";
-     display: table;
-     clear: both;
-}
-h1 {
-     font-family: "Goldman";
-     font-size: 25px;
-     color: black;
-     text-align: center;
-     padding: 5px;
-}
-h2 {
-     font-family: "Poppins";
-     font-size: 14px;
-     color: white;
-     padding: 7px 0px 7px 0px;
-}
-h3 {
-     font-family: "Poppins";
-     font-size: 14px;
-     color: white;
-     padding: 15px 0px 15px 0px;
-}
 option {
      color: orange;
      background-color: black;
+     opacity: 0.8;
 }
 select {
      background-color: black;
@@ -73,7 +36,7 @@ select {
      width: 85%;
      border-radius: 5px;
      border: 2px solid white;
-     padding: 3px 3px 3px 15px;
+     padding: 3px 3px 3px 20px;
      font-family: "Poppins";
      font-size: 14px;
      cursor: pointer;
@@ -81,72 +44,43 @@ select {
 select:focus {
      border: 2px solid #c2b280;
 }
+.container {
+     width: 85%;
+     padding:  20px 20px 30px 30px;
+     opacity: 0.8;
+     border-radius: 20px;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     margin: auto;
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translateX(-50%) translateY(-50%);
+}
 
-.input-box input[type="text"] {
+h1 {
+     font-family: "Goldman";
+     font-size: 25px;
+     color: black;
+     text-align: center;
+}
+h2 {
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+}
+
+.input-box input {
      padding: 5px 5px 5px 30px;
      border-radius: 5px;
      border: 2px solid white;
      font-family: "Poppins";
-     font-size: 14px;
+     font-size: 12px;
      color: white;
      background: transparent;
      width: 85%;
 }
-.check input {
-     position: absolute;
-     opacity: 0;
-     cursor: pointer;
-     height: 0;
-     width: 0;
-}
-.check {
-     display: block;
-     position: relative;
-     padding-left: 25px;
-     margin-bottom: 15px;
-     cursor: pointer;
-     font-family: "Poppins";
-     color: white;
-     font-size: 12px;
-     -webkit-user-select: none;
-     -moz-user-select: none;
-     user-select: none;
-}
-.checkmark {
-     position: absolute;
-     top: 0;
-     left: 0;
-     border-radius: 3px;
-     height: 19px;
-     width: 19px;
-     background-color: white;
-}
-.check:hover input ~ .checkmark {
-     background-color: lightgrey;
-}
-.check input:checked ~ .checkmark {
-     background-color: green;
-}
-.checkmark::after {
-     content: "";
-     position: absolute;
-     display: none;
-}
-.check input:checked ~ .checkmark:after {
-     display: block;
-}
-.check .checkmark:after {
-     left: 5px;
-     top: 2px;
-     width: 5px;
-     height: 9px;
-     border: solid white;
-     border-width: 0 3px 3px 0;
-     -webkit-transform: rotate(45deg);
-     transform: rotate(45deg);
-}
 .input-box input:focus {
-     border: 3px solid #c2b280;
+     border: 2px solid #c2b280;
 }
 
 .input-box i {
@@ -170,9 +104,8 @@ select:focus {
      text-align: center;
      font-family: "Open Sans";
      font-size: 16px;
-     margin-top: 30px;
-     cursor: pointer;
 }
+
 .loader-wrapper {
      width: 100%;
      height: 100%;
@@ -236,3 +169,4 @@ select:focus {
           height: 0%;
      }
 }
+
