--- a/public/css/msignup.css
+++ b/public/css/msignup.css
@@ -1,101 +1,173 @@
-a:link {
-     color: white;
-     text-decoration: solid;
+::placeholder {
+     color: black;
 }
-a:visited {
-     color: white;
+* {
+     box-sizing: border-box;
 }
 a:hover {
-     color: orange;
+     color: black;
 }
-h1 {
-     text-align: center;
-     color: white;
-     font-size: 40px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+a {
+    color: white;
+    text-decoration: none;
+    font-size: 13px;
+    font-family: "Poppins";
 }
-h2 {
-     color: orange;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(+73%) translateY(50%);
-}
-
-h3 {
-     color: white;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(13%) translateY(+230%);
-}
-p {
-     color: orange;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+40%);
-}
-option {
-     color: orange;
-     background-color: black;
-}
-select {
-     background-color: black;
-     color: white;
-     width: 200px;
-     height: 25px;
-     border-radius: 5px;
-     cursor: pointer;
-}
-#button {
-     margin: 40px auto 20px;
-     width: 80%;
-     display: block;
-     outline: none;
-     padding: 10px 0;
-     cursor: pointer;
-     background: transparent;
-     color: white;
-     opacity: 0.8;
-     font-size: 20px;
-     border-radius: 10px;
-}
-#button:hover {
-     background-color: green;
-}
-.form-box {
-     width: 100%;
-     margin: auto;
-     background: black;
-     padding: 40px;
-     border-radius: 20px;
-     opacity: 0.8;
-     transform: translateX(47%) translateY(50%);
-}
-.input-box {
-     margin: 31px auto;
-     width: 80%;
-     padding-top: 5px;
-}
-.input-box input {
-     width: 90%;
-     border: none;
-     outline: none;
-     background: transparent;
-     color: white;
+html, body {
+     margin: 0;
+     padding: 0;
 }
 html {
-     background: url(back.png) no-repeat center center fixed;
+     background: url(mBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
 }
+option {
+     color: orange;
+     background-color: black;
+     opacity: 0.8;
+}
+select {
+     background-color: black;
+     opacity: 0.8;
+     color: white;
+     width: 85%;
+     border-radius: 5px;
+     border: 2px solid white;
+     padding: 3px 3px 3px 20px;
+     font-family: "Poppins";
+     font-size: 14px;
+     cursor: pointer;
+}
+select:focus {
+     border: 2px solid #c2b280;
+}
+.container {
+     width: 100%;
+     /*height: 100vh;*/
+     padding:  20px 20px 30px 30px;
+     opacity: 0.8;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     margin: auto;
+     /*background: url(formBack.png) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;*/
+}
+
+h1 {
+     font-family: "Goldman";
+     font-size: 25px;
+     color: black;
+     text-align: center;
+}
+h2 {
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+}
+
+.input-box input {
+     padding: 5px 5px 5px 30px;
+     border-radius: 5px;
+     border: 2px solid white;
+     font-family: "Poppins";
+     font-size: 12px;
+     color: white;
+     background: transparent;
+     width: 85%;
+}
+.input-box input:focus {
+     border: 2px solid #c2b280;
+}
+
+.input-box i {
+     position: absolute;
+}
+.icon {
+     padding: 10px;
+     min-width: 40px;
+     color: white;
+}
 .eye {
      position: absolute;
 }
-#hide1 {
-     display: none;
+#button {
+     width: 50%;
+     background-color: green;
+     color: white;
+     padding: 2px;
+     border: 3px solid white;
+     border-radius: 4px;
+     text-align: center;
+     font-family: "Open Sans";
+     font-size: 16px;
 }
+
+.loader-wrapper {
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 1;
+     background-color: #242f3f;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+}
+.loader {
+     display: inline-block;
+     width: 30px;
+     height: 30px;
+     position: relative;
+     border: 4px solid #fff;
+     animation: loader 2s infinite ease;
+}
+.loader-inner {
+     vertical-align: top;
+     display: inline-block;
+     width: 100%;
+     background-color: #fff;
+     animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+     0% {
+          transform: rotate(0deg);
+     }
+     25% {
+          transform: rotate(180deg);
+     }
+     50% {
+          transform: rotate(180deg);
+     }
+     75% {
+          transform: rotate(360deg);
+     }
+     100% {
+          transform: rotate(360deg);
+     }
+}
+
+@keyframes loader-inner {
+     0% {
+          height: 0%;
+     }
+     25% {
+          height: 0%;
+     }
+     50% {
+          height: 100%;
+     }
+     75% {
+          height: 100%;
+     }
+     100% {
+          height: 0%;
+     }
+}
+
