--- a/public/css/mstatus.css
+++ b/public/css/mstatus.css
@@ -2,7 +2,7 @@ body {
      margin: 0;
 }
 html {
-     background: url(back.png) no-repeat center center fixed;
+     background: url(mBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
@@ -16,102 +16,51 @@ html {
 }
 
 .container {
-     width: 50%;
-     height: 100vh;
+     width: 90%;
+     padding: 20px 15px 30px 15px;
      background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
-     padding: 30px 30px 30px 60px;
+     border-radius: 20px;
      position: absolute;
-     right: 0;
+     top: 50%;
+     left: 50%;
+     transform: translateX(-50%) translateY(-50%);
      margin: auto;
      opacity: 0.8;
 }
-.column {
-     float: left;
-     width: 50%;
-}
-.divide:after {
-     content: "";
-     display: table;
-     clear: both;
-}
+
 h1 {
      font-family: "Goldman";
-     font-size: 30px;
+     width: 100%;
+     font-size: 25px;
      color: black;
      text-align: center;
      padding: 5px 0 25px 0;
+     animation: text 3s infinite;
 }
-h2 {
-     font-family: "Poppins";
-     font-size: 18px;
-     color: white;
-     padding: 7px 0px 7px 0px;
+@keyframes text {
+     0% {
+          color: black;
+     }
+     35% {
+          letter-spacing: 3.5px;
+     }
+     85% {
+          letter-spacing: 0px;
+     }
 }
-h3 {
-     font-family: "Poppins";
-     font-size: 18px;
-     color: rgb(209, 197, 28);
-     padding-bottom: 20px;
-}
-
 #button {
-     width: 70%;
+     width: 40%;
      background-color: green;
      color: white;
-     padding: 7px;
+     padding: 2px;
      border: 3px solid white;
-     border-radius: 10px;
+     border-radius: 4px;
      text-align: center;
      font-family: "Open Sans";
-     font-size: 18px;
-     margin-top: 30px;
+     font-size: 16px;
+     margin-top: 25px;
+     margin-left: 30%;
      cursor: pointer;
-}
-#button1 {
-     width: 70%;
-     background-color: green;
-     color: white;
-     padding: 7px;
-     border: 3px solid white;
-     border-radius: 10px;
-     text-align: center;
-     font-family: "Open Sans";
-     font-size: 18px;
-     margin-top: 30px;
-     cursor: pointer;
-}
-#linkedIn{
-     background: #007bb5;
-     color: white;
-     padding: 10px;
-     font-size: 25px;
-     width: 25% ;
-     text-align: center;
-     text-decoration: none;
-     margin: 20px 20px 20px 0p;
-     border-radius: 15px;
-}
-#github{
-     background: #dd4b39;
-     color: white;
-     padding: 10px;
-     font-size: 25px;
-     width: 25%;
-     text-align: center;
-     text-decoration: none;
-     margin: 20px;
-     border-radius: 15px;
-}
-#insta{
-     background: #125688;
-     color: white;
-     padding: 10px;
-     font-size: 25px;
-     width: 25%;
-     text-align: center;
-     text-decoration: none;
-     margin: 20px 20px 20px 0;
-     border-radius: 15px;
 }
 .loader-wrapper {
      width: 100%;
