--- a/public/css/mtenant.css
+++ b/public/css/mtenant.css
@@ -1,67 +1,169 @@
-h1 {
-     text-align: center;
-     color: white;
-     font-size: 30px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-p {
-     color: orange;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+50%);
-}
-#button {
-     margin: 40px auto 20px;
-     width: 80%;
-     display: block;
-     outline: none;
-     padding: 10px;
-     cursor: pointer;
-     background: transparent;
-     color: white;
-     font-size: 18px;
-     border-radius: 10px;
-     transform: translateX(0%) translateY(+50%);
-}
-#button:hover {
-     background-color: green;
-}
-.form-box {
-     width: 85%;
-     margin: auto;
-     background: black;
-     padding: 15px;
-     border-radius: 20px;
-     opacity: 0.8;
-     transform: translateX(-1%) translateY(+25%);
+body {
+     margin: 0;
 }
 html {
-     background: url(back.png) no-repeat center center fixed;
+     background: url(mBack.png) no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
 }
+* {
+     box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+     border: 0;
+}
+a:hover {
+     color: orange;
+}
+a {
+     color: white;
+     font-family: "Poppins";
+     font-size: 15px;
+     text-decoration: none;
+}
+.container {
+     width: 85%;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     padding: 30px 30px 30px 30px;
+     position: absolute;
+     border-radius: 20px;
+     top: 50%;
+     left: 50%;
+     transform: translateX(-50%) translateY(-50%);
+     margin: auto;
+     opacity: 0.8;
+}
+h1 {
+     font-family: "Goldman";
+     font-size: 25px;
+     color: black;
+     text-align: center;
+     padding: 5px;
+}
+h2 {
+     font-family: "Poppins";
+     font-size: 18px;
+     color: white;
+     padding: 7px 0px 7px 0px;
+}
 option {
      color: orange;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      background-color: black;
 }
 select {
      background-color: black;
      color: white;
-     width: 200px;
-     height: 25px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     width: 100%;
      border-radius: 5px;
+     border: 2px solid white;
+     padding: 3px 3px 3px 15px;
+     font-family: "Poppins";
+     font-size: 14px;
      cursor: pointer;
 }
-.input-select {
-     margin: 10px;
-     width: 80%;
-     padding-top: 0.5px;
+select:focus {
+     border: 2px solid #c2b280;
 }
 
+.input-box input {
+     padding: 5px 5px 5px 30px;
+     border-radius: 5px;
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+     background: black;
+     width: 100%;
+}
+.input-box input:focus {
+     border: 3px solid #c2b280;
+}
+
+.input-box i {
+     position: absolute;
+}
+.icon {
+     padding: 10px;
+     min-width: 40px;
+     color: white;
+}
+.eye {
+     position: absolute;
+}
+#button {
+     width: 50%;
+     background-color: green;
+     color: white;
+     padding: 2px;
+     border: 3px solid white;
+     border-radius: 4px;
+     text-align: center;
+     font-family: "Open Sans";
+     font-size: 16px;
+     margin-top: 35px;
+     cursor: pointer;
+}
+.loader-wrapper {
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 1;
+     background-color: #242f3f;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+}
+.loader {
+     display: inline-block;
+     width: 30px;
+     height: 30px;
+     position: relative;
+     border: 4px solid #fff;
+     animation: loader 2s infinite ease;
+}
+.loader-inner {
+     vertical-align: top;
+     display: inline-block;
+     width: 100%;
+     background-color: #fff;
+     animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+     0% {
+          transform: rotate(0deg);
+     }
+     25% {
+          transform: rotate(180deg);
+     }
+     50% {
+          transform: rotate(180deg);
+     }
+     75% {
+          transform: rotate(360deg);
+     }
+     100% {
+          transform: rotate(360deg);
+     }
+}
+
+@keyframes loader-inner {
+     0% {
+          height: 0%;
+     }
+     25% {
+          height: 0%;
+     }
+     50% {
+          height: 100%;
+     }
+     75% {
+          height: 100%;
+     }
+     100% {
+          height: 0%;
+     }
+}
