--- a/public/css/resetPassword.css
+++ b/public/css/resetPassword.css
@@ -1,15 +1,5 @@
-::placeholder{
+::placeholder {
      color: black;
-}
-body {
-     margin: 0;
-}
-html {
-     background: url(mBack.png) no-repeat center center fixed;
-     -webkit-background-size: cover;
-     -moz-background-size: cover;
-     -o-background-size: cover;
-     background-size: cover;
 }
 * {
      box-sizing: border-box;
@@ -17,63 +7,52 @@ html {
      padding: 0;
      border: 0;
 }
-a:hover {
-     color: orange;
+body {
+     margin: 0;
 }
-a {
-     color: white;
-     font-family: "Poppins";
-     font-size: 15px;
-     text-decoration: none;
+html {
+     background: url(back.png) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
 }
+
 .container {
-     width: 100%;
-     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
-     padding: 20px 20px 30px 30px;
-     position: absolute;
-     margin: auto;
-     opacity: 0.8;
-}
-.column {
-     float: left;
      width: 50%;
-}
-.divide:after {
-     content: "";
-     display: table;
-     clear: both;
+     height: 100vh;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     padding: 30px 30px 30px 60px;
+     position: absolute;
+     right: 0;
+     opacity: 0.8;
 }
 h1 {
      font-family: "Goldman";
-     font-size: 25px;
+     font-size: 30px;
      color: black;
      text-align: center;
-     padding: 5px;
 }
 h2 {
      font-family: "Poppins";
-     font-size: 14px;
+     font-size: 16px;
      color: white;
-     padding: 7px 0px 7px 0px;
-}
-h3 {
-     font-family: "Poppins";
-     font-size: 14px;
-     color: white;
-     padding: 15px 0px 15px 0px;
+     padding: 20px 0 7px 0;
 }
 option {
      color: orange;
-     background-color: black;
+     background: black;
+     padding: 2px;
+     opacity: 0.8;
 }
 select {
      background-color: black;
      opacity: 0.8;
      color: white;
-     width: 85%;
+     width: 70%;
      border-radius: 5px;
      border: 2px solid white;
-     padding: 3px 3px 3px 15px;
+     padding: 3px 3px 3px 20px;
      font-family: "Poppins";
      font-size: 14px;
      cursor: pointer;
@@ -82,7 +61,7 @@ select:focus {
      border: 2px solid #c2b280;
 }
 
-.input-box input[type="text"] {
+.input-box input {
      padding: 5px 5px 5px 30px;
      border-radius: 5px;
      border: 2px solid white;
@@ -90,63 +69,10 @@ select:focus {
      font-size: 14px;
      color: white;
      background: transparent;
-     width: 85%;
-}
-.check input {
-     position: absolute;
-     opacity: 0;
-     cursor: pointer;
-     height: 0;
-     width: 0;
-}
-.check {
-     display: block;
-     position: relative;
-     padding-left: 25px;
-     margin-bottom: 15px;
-     cursor: pointer;
-     font-family: "Poppins";
-     color: white;
-     font-size: 12px;
-     -webkit-user-select: none;
-     -moz-user-select: none;
-     user-select: none;
-}
-.checkmark {
-     position: absolute;
-     top: 0;
-     left: 0;
-     border-radius: 3px;
-     height: 19px;
-     width: 19px;
-     background-color: white;
-}
-.check:hover input ~ .checkmark {
-     background-color: lightgrey;
-}
-.check input:checked ~ .checkmark {
-     background-color: green;
-}
-.checkmark::after {
-     content: "";
-     position: absolute;
-     display: none;
-}
-.check input:checked ~ .checkmark:after {
-     display: block;
-}
-.check .checkmark:after {
-     left: 5px;
-     top: 2px;
-     width: 5px;
-     height: 9px;
-     border: solid white;
-     border-width: 0 3px 3px 0;
-     -webkit-transform: rotate(45deg);
-     transform: rotate(45deg);
+     width: 70%;
 }
 .input-box input:focus {
-     border: 3px solid #c2b280;
+     border: 2px solid #c2b280;
 }
 
 .input-box i {
@@ -161,18 +87,18 @@ select:focus {
      position: absolute;
 }
 #button {
-     width: 50%;
+     width: 40%;
      background-color: green;
+     cursor: pointer;
      color: white;
-     padding: 2px;
+     padding: 4px 4px 7px 4px;
      border: 3px solid white;
-     border-radius: 4px;
+     border-radius: 12px;
      text-align: center;
      font-family: "Open Sans";
-     font-size: 16px;
-     margin-top: 30px;
-     cursor: pointer;
+     font-size: 18px;
 }
+
 .loader-wrapper {
      width: 100%;
      height: 100%;
