--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -1,71 +1,10 @@
-a:hover {
-     color: orange;
-}
-
-#button1 {
-     width: 150px;
-     font-size: 20px;
-     color: white;
-     height: 50px;
-     opacity: 0.8;
-     border-radius: 10px;
-     background-color: black;
-     text-align: center;
-     font-family: fantasy;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(-135%) translateY(+70%);
-}
-
-#button1:hover {
-     background-color: orange;
-     cursor: pointer;
-}
-#button2 {
-     width: 150px;
-     font-size: 20px;
-     color: white;
-     opacity: 0.8;
-     height: 50px;
-     border-radius: 10px;
-     background-color: black;
-     text-align: center;
-     font-family: fantasy;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translateX(15%) translateY(+70%);
-}
-
-#button2:hover {
-     background-color: green;
-     cursor: pointer;
-}
-ul {
-     list-style-type: none;
+*{
+     border: 0;
      margin: 0;
      padding: 0;
-     overflow: hidden;
-     background-color: black;
 }
-li {
-     float: left;
-     font-size: 20px;
-     font-family: fantasy;
-}
-li a {
-     display: block;
-     padding: 14px 130px;
-     color: white;
-     text-align: center;
-     text-decoration: none;
-}
-li a:visited {
-     color: white;
-}
-li a:hover {
-     color: orange;
+body {
+     margin: 0;
 }
 html {
      background: url(back.png) no-repeat center center fixed;
@@ -73,4 +12,216 @@ html {
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
+}
+.topnav {
+     overflow: hidden;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     opacity: 0.8;
+     font-family: "Poppins";
+}
+
+.topnav a {
+     float: left;
+     display: block;
+     color: #f2f2f2;
+     text-align: center;
+     padding: 12px 127px;
+     text-decoration: none;
+     font-size: 17px;
+}
+.topnav a:hover {
+     background-color: #336b89;
+     color: black;
+}
+
+.topnav .icon {
+     display: none;
+}
+.topnav a.active{
+     color: white;
+}
+#button1 {
+     width: 15%;
+     font-size: 20px;
+     color: white;
+     padding: 8px;
+     border-radius: 10px;
+     border: 3px solid white;
+     background-color: #AA98A9;
+     text-align: center;
+     font-family: "Open Sans";
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translateX(-135%) translateY(+70%);
+}
+
+#button1:hover {
+     cursor: pointer;
+}
+#button2 {
+     width: 15%;
+     font-size: 20px;
+     color: white;
+     padding: 8px;
+     border-radius: 10px;
+     border: 3px solid white;
+     background-color: #C2B280;
+     text-align: center;
+     font-family: "Open Sans";
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translateX(15%) translateY(+70%);
+}
+
+#button2:hover {
+     cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+     .topnav a:not(:first-child) {
+          display: none;
+     }
+     .topnav a.icon {
+          float: right;
+          display: block;
+     }
+}
+
+@media screen and (max-width: 600px) {
+     .topnav.responsive {
+          position: relative;
+     }
+     .topnav.responsive .icon {
+          position: absolute;
+          right: 0;
+          top: 0;
+     }
+     .topnav.responsive a {
+          float: none;
+          display: block;
+          text-align: left;
+     }
+     .topnav a {
+     float: left;
+     display: block;
+     color: #f2f2f2;
+     text-align: center;
+     padding: 12px 20px;
+     text-decoration: none;
+     font-size: 17px;
+}
+}
+@media screen and (max-width: 600px) {
+     #button1 {
+          width: 35%;
+          font-size: 19px;
+          color: white;
+          padding: 3px;
+          border-radius: 5px;
+          border: 3px solid white;
+          font-family: "Open Sans";
+          background-color: #AA98A9;
+          text-align: center;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translateX(-120%) translateY(+40%);
+     }
+
+     #button1:hover {
+          cursor: pointer;
+     }
+     #button2 {
+          width: 35%;
+          font-size: 19px;
+          color: white;
+          padding: 3px;
+          border-radius: 5px;
+          border: 3px solid white;
+          background-color: #C2B280;
+          text-align: center;
+          font-family: "Open Sans";
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translateX(20%) translateY(+40%);
+     }
+
+     #button2:hover {
+          cursor: pointer;
+     }
+     html {
+     background: url(mBack.png) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+     overflow: hidden;
+   }
+}
+
+.loader-wrapper {
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 1;
+     background-color: #242f3f;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+}
+.loader {
+     display: inline-block;
+     width: 30px;
+     height: 30px;
+     position: relative;
+     border: 4px solid #fff;
+     animation: loader 2s infinite ease;
+}
+.loader-inner {
+     vertical-align: top;
+     display: inline-block;
+     width: 100%;
+     background-color: #fff;
+     animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+     0% {
+          transform: rotate(0deg);
+     }
+     25% {
+          transform: rotate(180deg);
+     }
+     50% {
+          transform: rotate(180deg);
+     }
+     75% {
+          transform: rotate(360deg);
+     }
+     100% {
+          transform: rotate(360deg);
+     }
+}
+
+@keyframes loader-inner {
+     0% {
+          height: 0%;
+     }
+     25% {
+          height: 0%;
+     }
+     50% {
+          height: 100%;
+     }
+     75% {
+          height: 100%;
+     }
+     100% {
+          height: 0%;
+     }
 }
