--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,89 +1,14 @@
-a:link {
-     color: white;
-     text-decoration: solid;
+::placeholder{
+     color: black;
 }
-a:visited {
-     color: white;
+* {
+     box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+     border: 0;
 }
-a:hover {
-     color: orange;
-}
-h1 {
-     text-align: center;
-     color: white;
-     font-size: 25px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-h2 {
-     color: white;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(+70%) translateY(-30%);
-}
-h3 {
-     color: white;
-     font-size: 15px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+150%);
-}
-p {
-     color: orange;
-     font-size: 20px;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(10%) translateY(+50%);
-}
-option {
-     color: orange;
-     background-color: black;
-}
-select {
-     background-color: black;
-     color: white;
-     width: 200px;
-     height: 25px;
-     border-radius: 5px;
-     cursor: pointer;
-}
-#button {
-     margin: 40px auto 20px;
-     width: 80%;
-     display: block;
-     outline: none;
-     padding: 10px 0;
-     cursor: pointer;
-     background: transparent;
-     color: orange;
-     opacity: 0.8;
-     font-size: 16px;
-     border-radius: 10px;
-}
-#button:hover {
-     background-color: green;
-}
-.form-box {
-     width: 450px;
-     margin: auto;
-     background: black;
-     padding: 20px;
-     border-radius: 20px;
-     opacity: 0.8;
-     transform: translateX(0%) translateY(0%);
-}
-.input-box {
-     margin: 31px auto;
-     width: 80%;
-     padding-top: 5px;
-}
-.input-box input {
-     width: 90%;
-     border: none;
-     outline: none;
-     background: transparent;
-     color: white;
+body {
+     margin: 0;
 }
 html {
      background: url(back.png) no-repeat center center fixed;
@@ -92,9 +17,171 @@ html {
      -o-background-size: cover;
      background-size: cover;
 }
+:root{
+   scrollbar-color: #2d4059 #1d191f !important;
+   scrollbar-width: thin !important;  
+}
+::-webkit-scrollbar{
+     width: 15px;
+     height: 30px;
+}
+::-webkit-scrollbar-track{
+      background: #1d191f;
+}
+::-webkit-scrollbar-thumb{
+      background: #2d4059;
+}
+a {
+    color: white;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: "Poppins";
+}
+a:hover {
+     color: black;
+}
+.container {
+     width: 50%;
+     background: linear-gradient(to bottom right, #2c3e50 0%, #bdc3c7 100%);
+     padding: 30px 30px 30px 60px;
+     position: absolute;
+     right: 0;
+     opacity: 0.8;
+     transform: translateY(0%);
+}
+h1 {
+     font-family: "Goldman";
+     font-size: 30px;
+     color: black;
+     text-align: center;
+}
+h2 {
+     font-family: "Poppins";
+     font-size: 16px;
+     color: white;
+     padding: 20px 0 7px 0;
+}
+option {
+     color: orange;
+     background: black;
+     padding: 2px;
+     opacity: 0.8;
+}
+select {
+     background-color: black;
+     opacity: 0.8;
+     color: white;
+     width: 70%;
+     border-radius: 5px;
+     border: 2px solid white;
+     padding: 3px 3px 3px 20px;
+     font-family: "Poppins";
+     font-size: 14px;
+     cursor: pointer;
+}
+select:focus {
+     border: 2px solid #c2b280;
+}
+
+.input-box input {
+     padding: 5px 5px 5px 30px;
+     border-radius: 5px;
+     border: 2px solid white;
+     font-family: "Poppins";
+     font-size: 14px;
+     color: white;
+     background: transparent;
+     width: 70%;
+}
+.input-box input:focus {
+     border: 2px solid #c2b280;
+}
+
+.input-box i {
+     position: absolute;
+}
+.icon {
+     padding: 10px;
+     min-width: 40px;
+     color: white;
+}
 .eye {
      position: absolute;
 }
-#hide1 {
-     display: none;
+#button {
+     width: 40%;
+     background-color: green;
+     cursor: pointer;
+     color: white;
+     padding: 4px 4px 7px 4px;
+     border: 3px solid white;
+     border-radius: 12px;
+     text-align: center;
+     font-family: "Open Sans";
+     font-size: 18px;
 }
+
+.loader-wrapper {
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 1;
+     background-color: #242f3f;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+}
+.loader {
+     display: inline-block;
+     width: 30px;
+     height: 30px;
+     position: relative;
+     border: 4px solid #fff;
+     animation: loader 2s infinite ease;
+}
+.loader-inner {
+     vertical-align: top;
+     display: inline-block;
+     width: 100%;
+     background-color: #fff;
+     animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+     0% {
+          transform: rotate(0deg);
+     }
+     25% {
+          transform: rotate(180deg);
+     }
+     50% {
+          transform: rotate(180deg);
+     }
+     75% {
+          transform: rotate(360deg);
+     }
+     100% {
+          transform: rotate(360deg);
+     }
+}
+
+@keyframes loader-inner {
+     0% {
+          height: 0%;
+     }
+     25% {
+          height: 0%;
+     }
+     50% {
+          height: 100%;
+     }
+     75% {
+          height: 100%;
+     }
+     100% {
+          height: 0%;
+     }
+}
+
