--- a/views/Account.hbs
+++ b/views/Account.hbs
@@ -1,24 +1,74 @@
-<html>
-
-<head>
-    <title>Account Deatils</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/account.css">
-    <link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/maccount.css">
-    <link rel="icon" href="icon.png" type="image/png">
-</head>
-
-<body>
-    <h1>{{email}}</h1>
-    <h2>First Name: <span>{{firstName}}</span> </h2>
-    <h3>Last Name: <span>{{lastName}}</span></h3>
-    <h4>Mobile Number: <span>{{phoneNumber}}</span></h2>
-        <form action="/changePassword" method="GET">
-            <input type="submit" value="Change Password" id="button" />
-        </form>
-        <form action="/getAddress" method="GET">
-            <input type="submit" value="My Address" id="button1" />
-        </form>
-</body>
-
+<!DOCTYPE html>
+<html lang="en">
+     <head>
+          <meta charset="UTF-8" />
+          <meta
+               name="viewport"
+               content="width=device-width, initial-scale=1.0"
+          />
+          <title>Account Details</title>
+          <link
+               rel="stylesheet"
+               href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins|Goldman&effect=outline|anaglyph|shadow-multiple"
+          />
+          <link
+               rel="stylesheet"
+               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+          />
+          <link
+               rel="stylesheet"
+               media="screen and (min-width: 500px)"
+               type="text/css"
+               href="/css/account.css"
+          />
+          <link
+               rel="stylesheet"
+               media="screen and (max-width: 499px)"
+               type="text/css"
+               href="/css/maccount.css"
+          />
+          <link rel="icon" href="icon.png" type="image/png" />
+           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+          <script>
+               $(window).on("load", function () {
+                    $(".loader-wrapper").fadeOut("slow");
+               });
+          </script>
+     </head>
+     <body>
+          <div class="loader-wrapper" id="loader-wrapper">
+               <span class="loader"><span class="loader-inner"></span></span>
+          </div>
+          <div class="container">
+               <h1 class="font-effect-shadow-multiple">Account</h1>
+               <h2>Email</h2>
+               <h3>{{email}}</h3>
+               <h2>First Name</h2>
+               <h3>{{firstName}}</h3>
+               <h2>Last Name</h2>
+               <h3>{{lastName}}</h3>
+               <h2>Mobile Number</h2>
+               <h3>{{phoneNumber}}</h3>
+               <div class="divide">
+                    <div class="column left">
+                         <form action="/getAddress" method="GET">
+                              <input
+                                   type="submit"
+                                   id="button"
+                                   value="My Address"
+                              />
+                         </form>
+                    </div>
+                    <div class="column right">
+                         <form action="/changePassword" method="GET">
+                              <input
+                                   type="submit"
+                                   id="button1"
+                                   value="Change Password"
+                              />
+                         </form>
+                    </div>
+               </div>
+          </div>
+     </body>
 </html>
