--- a/views/resetPassword.hbs
+++ b/views/resetPassword.hbs
@@ -6,30 +6,30 @@
                name="viewport"
                content="width=device-width, initial-scale=1.0"
           />
-          <title>Login</title>
+          <title>Reset Password</title>
           <link
                rel="stylesheet"
-               href="https://fonts.googleapis.com/css?family=Poppins|Goldman|karla|Open+Sans&effect=anaglyph|shadow-multiple|outline|neon|fire"
+               href="https://fonts.googleapis.com/css?family=Poppins|Open+Sans|Goldman&effect=anaglyph|outline|shadow-multiple"
           />
           <link
                rel="stylesheet"
                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
           />
-          <link rel="icon" href="icon.png" type="image/png" />
-          <script src="/js/login.js"></script>
+          <script src="/js/signup.js"></script>
           <link
                rel="stylesheet"
                media="screen and (min-width: 500px)"
                type="text/css"
-               href="/css/login.css"
+               href="/css/resetPassword.css"
           />
           <link
                rel="stylesheet"
                media="screen and (max-width: 499px)"
                type="text/css"
-               href="/css/mlogin.css"
+               href="/css/mresetPassword.css"
           />
-           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+          <link rel="icon" href="icon.png" type="image/png" />
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
           <script>
                $(window).on("load", function () {
                     $(".loader-wrapper").fadeOut("slow");
@@ -42,20 +42,37 @@
           </div>
           <div class="container">
                <div class="login-box">
-                    <form action="/find-account" method="POST">
-                         <h1 class="font-effect-shadow-multiple">Login</h1>
+                    <form action="/resetPassword" method="POST">
+                         <h1 class="font-effect-shadow-multiple">
+                              Reset Password
+                         </h1>
                          <br />
                          <div class="input-box">
-                              <h2>Username</h2>
-                              <i class="fa fa-envelope icon"></i>
-                              <input type="email" placeholder="email" name="email" id="myEmail" required/>
+                              <h2>Email</h2>
+                              <select name="email">
+                                   <option>{{email}}</option>
+                              </select>
                               <br />
-                              <h2>Password</h2>
+                              <h2>Your Selected Question</h2>
+                              <select name="securityQuestion">
+                                   <option>{{securityQuestion}}</option>
+                              </select>
+                              <h2>Security answer</h2>
+                              <i class="far fa-keyboard icon"></i>
+                              <input
+                                   type="text"
+                                   placeholder="Security answer"
+                                   name="securityAnswer"
+                                   required
+                              />
+                              <h2>New Password</h2>
                               <i class="fa fa-lock icon"></i>
                               <input
                                    type="password"
-                                   placeholder="password" name="password" minlength="6"
+                                   placeholder="password"
                                    id="myInput"
+                                   name="password"
+                                   minlength="6"
                                    required
                               />
                               <span class="eye" onclick="myFunction()">
@@ -76,12 +93,12 @@
                                              padding-left: 5px;
                                              padding-top: 5px;
                                         "
-                                   ></i> </span
-                              ><br /><a href="setPassword.html">Forgot password?</a><br /><br /><br />
-                              <input type="submit" value="Login" id="button" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                              <a href="Signup.html">New User?</a>
+                                   ></i>
+                              </span>
+                              <br /><br /><br />
+                              <input type="submit" value="Reset" id="button" />
                          </div>
-                     </form>
+                    </form>
                </div>
           </div>
      </body>
